--- a/index.html
+++ b/index.html
@@ -1299,7 +1299,7 @@ function renderPurchasesTable(purchases){
     const totalTWD = batch.items.reduce((sum, i) => sum + (Number(i.twd)||0), 0);
     const totalKRW = batch.items.reduce((sum, i) => sum + (Number(i.krw)||0), 0);
     
-    const batchIdSafe = bid.replace(/[^a-zA-Z0-9]/g, '_'); // 安全的 ID
+    const batchIdSafe = batch.batchId.replace(/[^a-zA-Z0-9]/g, '_'); // 安全的 ID
     
     return `
       <tr style="background:var(--surface2);cursor:pointer;" onclick="toggleBatch('${batchIdSafe}')">
